trying to fix the logo on mobile screens

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ button:hover {
 
   .logo-img {
     padding-left: 5%;
-    padding-bottom: 5%;
+    /* padding-bottom: 5%; */
     width: 9rem;
   }
 
